[package]
name = "rust_opengl"
version = "0.1.0"
authors = ["pedro.almeida <pedroalmeida@softbox.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = {version = "0.32.2", features = ["bundled","static-link"]}